Products block finished

--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>product page</title>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -50,11 +51,24 @@
 					<a href="#"><img class="product__gallery_img" src="./images/bag-small.png"></a>
 				</div>
 				<a href="#"><img src="./images/bag-main.png"></a>
-			</div>
-			<div class="product__description">
-				<span class="product__chapter"></span>
-				<h1 class="product__title"></h1>
-				<span class="product__price"></span>
+			</div><div class="product__description">
+				<span class="product__chapter">
+					<i class="fa fa-mars product__chapter_mars" aria-hidden="true"></i><a class="product__chapter_link" href="#">Men Clothes</a><i class="fa fa-angle-right product__chapter_angel" aria-hidden="true"></i><a class="product__chapter_link" href="#">Coat & Jacket</a>
+				</span>
+				<h1 class="product__title">LIGHTWEIGHT NYLON KNITWEAT IN BLACK</h1>
+				<span class="product__price">$48.00</span>
+				<h3 class="product__description_title">Description</h3>
+				<p class="product__description_text">Cras efficitur iaculis sapien, vel tincidunt magna egestas at. Nunc finibus, metus id fermentum. Cras efficitur iaculis sapien, vel tincidunt magna egestas at, vel tincidunt magna egestas at cras effcitur.</p>
+				<p class="product__description_text">Cras efficitur iaculis sapien, vel tincidunt magna egestas at. Nunc finibus, metus id fermentum. </p>
+				<div class="product__colors">
+					<p class="product__colors_title">Colors</p>
+					<input type="radio" name="color" value="blue" id="blue">
+					<label class="product__colors_choice" for="blue"><i class="fa fa-stop" aria-hidden="true"></i>Blue</label>
+					<input type="radio" name="color" value="brown" id="brown" checked>
+					<label class="product__colors_choice" for="brown"><i class="fa fa-stop" aria-hidden="true"></i>Brown</label>
+				</div>
+				<div class="clear"></div>
+				<a class="product__button" href="#">Buy now - $78</a>
 			</div>
 		</div>
 	</div>
