--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
 			<div class="product__gallery">
 				<div class="product__gallery_small-img">
 					<a href="#"><img class="product__gallery_img" src="./images/bag-small.png"></a>
-					<a href="#"><img class="product__gallery_img" src="./images/bag-small.png"></a>
+					<a href="#"><img class="product__gallery_img" src="./images/bag-small_2.png"></a>
 				</div>
 				<a href="#"><img src="./images/bag-main.png"></a>
 			</div><div class="product__description">
@@ -72,5 +72,47 @@
 			</div>
 		</div>
 	</div>
+	<footer class="footer">
+		<div class="container">
+			<p class="footer__text">We thought</p>
+			<h2 class="footer__title">You might like these too...</h2>
+			<div class="footer__item">
+				<img class="footer__item_img" src="./images/bag.png">
+				<div class="footer__item_description">
+					<h3 class="footer__item_name">Leather bag</h3>
+					<span class="footer__item_price">$78</span>
+					<span class="footer__item_category">Bag</span>
+				</div>
+			</div><div class="footer__item">
+				<img class="footer__item_img" src="./images/box.png">
+				<div class="footer__item_description">
+					<h3 class="footer__item_name">Gift box colors</h3>
+					<span class="footer__item_price">$78</span>
+					<span class="footer__item_category">Gift</span>
+				</div>
+			</div><div class="footer__item">
+				<img class="footer__item_img" src="./images/plyknit.png">
+				<div class="footer__item_description">
+					<h3 class="footer__item_name">Flyknit lunar 3</h3>
+					<span class="footer__item_price">$78</span>
+					<span class="footer__item_category">Runing Shoes</span>
+				</div>
+			</div><div class="footer__item">
+				<img class="footer__item_img" src="./images/wallet.png">
+				<div class="footer__item_description">
+					<h3 class="footer__item_name">Wallets leather</h3>
+					<span class="footer__item_price">$78</span>
+					<span class="footer__item_category">Accessories</span>
+				</div>
+			</div><div class="footer__item">
+				<img class="footer__item_img" src="./images/shoes.png">
+				<div class="footer__item_description">
+					<h3 class="footer__item_name">Shoes men</h3>
+					<span class="footer__item_price">$78</span>
+					<span class="footer__item_category">Runing Shoes</span>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
