Chenges to products block

--- a/project/index.html
+++ b/project/index.html
@@ -63,11 +63,10 @@
 				<div class="product__colors">
 					<p class="product__colors_title">Colors</p>
 					<input type="radio" name="color" value="blue" id="blue">
-					<label class="product__colors_choice" for="blue"><i class="fa fa-stop" aria-hidden="true"></i>Blue</label>
+					<label class="product__colors_choice product__colors_choice_blue" for="blue"><i class="fa fa-stop fa-stop_blue" aria-hidden="true"></i>Blue</label>
 					<input type="radio" name="color" value="brown" id="brown" checked>
-					<label class="product__colors_choice" for="brown"><i class="fa fa-stop" aria-hidden="true"></i>Brown</label>
+					<label class="product__colors_choice" for="brown"><i class="fa fa-stop fa-stop_brown" aria-hidden="true"></i>Brown</label>
 				</div>
-				<div class="clear"></div>
 				<a class="product__button" href="#">Buy now - $78</a>
 			</div>
 		</div>
@@ -76,40 +75,42 @@
 		<div class="container">
 			<p class="footer__text">We thought</p>
 			<h2 class="footer__title">You might like these too...</h2>
-			<div class="footer__item">
-				<img class="footer__item_img" src="./images/bag.png">
-				<div class="footer__item_description">
-					<h3 class="footer__item_name">Leather bag</h3>
-					<span class="footer__item_price">$78</span>
-					<span class="footer__item_category">Bag</span>
-				</div>
-			</div><div class="footer__item">
-				<img class="footer__item_img" src="./images/box.png">
-				<div class="footer__item_description">
-					<h3 class="footer__item_name">Gift box colors</h3>
-					<span class="footer__item_price">$78</span>
-					<span class="footer__item_category">Gift</span>
-				</div>
-			</div><div class="footer__item">
-				<img class="footer__item_img" src="./images/plyknit.png">
-				<div class="footer__item_description">
-					<h3 class="footer__item_name">Flyknit lunar 3</h3>
-					<span class="footer__item_price">$78</span>
-					<span class="footer__item_category">Runing Shoes</span>
-				</div>
-			</div><div class="footer__item">
-				<img class="footer__item_img" src="./images/wallet.png">
-				<div class="footer__item_description">
-					<h3 class="footer__item_name">Wallets leather</h3>
-					<span class="footer__item_price">$78</span>
-					<span class="footer__item_category">Accessories</span>
-				</div>
-			</div><div class="footer__item">
-				<img class="footer__item_img" src="./images/shoes.png">
-				<div class="footer__item_description">
-					<h3 class="footer__item_name">Shoes men</h3>
-					<span class="footer__item_price">$78</span>
-					<span class="footer__item_category">Runing Shoes</span>
+			<div class="footer_wrapper">
+				<div class="footer__item">
+					<img class="footer__item_img" src="./images/bag.png">
+					<div class="footer__item_description">
+						<h3 class="footer__item_name">Leather bag</h3>
+						<span class="footer__item_price">$78</span>
+						<span class="footer__item_category">Bag</span>
+					</div>
+				</div><div class="footer__item">
+					<img class="footer__item_img" src="./images/box.png">
+					<div class="footer__item_description">
+						<h3 class="footer__item_name">Gift box colors</h3>
+						<span class="footer__item_price">$78</span>
+						<span class="footer__item_category">Gift</span>
+					</div>
+				</div><div class="footer__item">
+					<img class="footer__item_img" src="./images/plyknit.png">
+					<div class="footer__item_description">
+						<h3 class="footer__item_name">Flyknit lunar 3</h3>
+						<span class="footer__item_price">$78</span>
+						<span class="footer__item_category">Runing Shoes</span>
+					</div>
+				</div><div class="footer__item">
+					<img class="footer__item_img" src="./images/wallet.png">
+					<div class="footer__item_description">
+						<h3 class="footer__item_name">Wallets leather</h3>
+						<span class="footer__item_price">$78</span>
+						<span class="footer__item_category">Accessories</span>
+					</div>
+				</div><div class="footer__item">
+					<img class="footer__item_img" src="./images/shoes.png">
+					<div class="footer__item_description">
+						<h3 class="footer__item_name">Shoes men</h3>
+						<span class="footer__item_price">$78</span>
+						<span class="footer__item_category">Runing Shoes</span>
+					</div>
 				</div>
 			</div>
 		</div>
