added responsive to products block

--- a/project/index.html
+++ b/project/index.html
@@ -45,12 +45,14 @@
 	</header>
 	<div class="product">
 		<div class="container">
-			<div class="product__gallery">
+			<div class="product__gallery clearfix">
+				<a href="#">
+					<img class="product__gallery_main-img" src="./images/bag-main.png">
+				</a>
 				<div class="product__gallery_small-img">
 					<a href="#"><img class="product__gallery_img" src="./images/bag-small.png"></a>
 					<a href="#"><img class="product__gallery_img" src="./images/bag-small_2.png"></a>
 				</div>
-				<a href="#"><img src="./images/bag-main.png"></a>
 			</div><div class="product__description">
 				<span class="product__chapter">
 					<i class="fa fa-mars product__chapter_mars" aria-hidden="true"></i><a class="product__chapter_link" href="#">Men Clothes</a><i class="fa fa-angle-right product__chapter_angel" aria-hidden="true"></i><a class="product__chapter_link" href="#">Coat & Jacket</a>
