Added header block

--- a/project/index.html
+++ b/project/index.html
@@ -13,34 +13,34 @@
 <body>
 	<header class="header">
 		<a class="header__logo" href="#"><img src="./images/logo.png"></a>
-		<div class="header__nav">
-			<ul class="header__list">
-				<li class="header__list_item">
-					<a class="header__list_link" href="#">Home</a>
+		<ul class="header__nav">
+			<li class="header__list_item">
+				<a class="header__list_link" href="#">Home</a>
+			</li>
+			<li class="header__list_item">
+				<a class="header__list_link" href="#">Products</a>
+			</li>
+			<li class="header__list_item">
+				<a class="header__list_link" href="#">Lookbook</a>
+			</li>
+			<li class="header__list_item">
+				<a class="header__list_link" href="#">Collection</a>
+			</li>
+		</ul>
+		<div class="header__account clearfix">
+			<div class="header__account-bag">
+				<a class="header__account_link" href="#">Bag</a>
+				<a class="header__account-bag_index" href="#">3</a>
+			</div>
+			<div class="header__account_line"></div>
+			<ul class="header__account-registration">
+				<li class="header__account_list header__account_list-border">
+					<a class="header__account_link" href="#">Login</a>
 				</li>
-				<li class="header__list_item">
-					<a class="header__list_link" href="#">Products</a>
-				</li>
-				<li class="header__list_item">
-					<a class="header__list_link" href="#">Lookbook</a>
-				</li>
-				<li class="header__list_item">
-					<a class="header__list_link" href="#">Collection</a>
+				<li class="header__account_list">
+					<a class="header__account_link" href="#">Sign up</a>
 				</li>
 			</ul>
-			<div class="header__account">
-				<div class="header__account-bag">
-					<a href="#">Bag</a>
-				</div>
-				<ul class="header__account-registration">
-					<li class="header__account_list">
-						<a class="header__account_link" href="#">Login</a>
-					</li>
-					<li class="header__account_list">
-						<a class="header__account_link" href="#">Sign up</a>
-					</li>
-				</ul>
-			</div>
 		</div>
 	</header>
 	<div class="product">
