--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="header">
 		<a class="header__logo" href="#"><img src="./images/logo.png"></a>
-		<ul class="header__nav">
+		<ul class="header__nav" id="menu">
 			<li class="header__list_item">
 				<a class="header__list_link" href="#">Home</a>
 			</li>
@@ -27,7 +27,7 @@
 				<a class="header__list_link" href="#">Collection</a>
 			</li>
 		</ul>
-		<div class="header__account clearfix">
+		<div class="header__account clearfix" id="account">
 			<div class="header__account-bag">
 				<a class="header__account_link" href="#">Bag</a>
 				<a class="header__account-bag_index" href="#">3</a>
@@ -42,6 +42,7 @@
 				</li>
 			</ul>
 		</div>
+		<a class="header__menu-bars clearfix" href="javascript:void(0);" onclick="menuFunction()"><i class="fa fa-bars" aria-hidden="true"></i></a>
 	</header>
 	<div class="product">
 		<div class="container">
@@ -117,5 +118,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
