changes to responsive menu

--- a/project/index.html
+++ b/project/index.html
@@ -80,40 +80,50 @@
 			<h2 class="footer__title">You might like these too...</h2>
 			<div class="footer_wrapper">
 				<div class="footer__item">
-					<img class="footer__item_img" src="./images/bag.png">
-					<div class="footer__item_description">
-						<h3 class="footer__item_name">Leather bag</h3>
-						<span class="footer__item_price">$78</span>
-						<span class="footer__item_category">Bag</span>
-					</div>
+					<a class="footer__item_link" href="#">
+						<img class="footer__item_img" src="./images/bag.png">
+						<div class="footer__item_description">
+							<h3 class="footer__item_name">Leather bag</h3>
+							<span class="footer__item_price">$78</span>
+							<span class="footer__item_category">Bag</span>
+						</div>
+					</a>
 				</div><div class="footer__item">
+					<a class="footer__item_link" href="#">
 					<img class="footer__item_img" src="./images/box.png">
-					<div class="footer__item_description">
-						<h3 class="footer__item_name">Gift box colors</h3>
-						<span class="footer__item_price">$78</span>
-						<span class="footer__item_category">Gift</span>
-					</div>
+						<div class="footer__item_description">
+							<h3 class="footer__item_name">Gift box colors</h3>
+							<span class="footer__item_price">$78</span>
+							<span class="footer__item_category">Gift</span>
+						</div>
+					</a>
 				</div><div class="footer__item">
-					<img class="footer__item_img" src="./images/plyknit.png">
-					<div class="footer__item_description">
-						<h3 class="footer__item_name">Flyknit lunar 3</h3>
-						<span class="footer__item_price">$78</span>
-						<span class="footer__item_category">Runing Shoes</span>
-					</div>
+					<a class="footer__item_link" href="#">
+						<img class="footer__item_img" src="./images/plyknit.png">
+						<div class="footer__item_description">
+							<h3 class="footer__item_name">Flyknit lunar 3</h3>
+							<span class="footer__item_price">$78</span>
+							<span class="footer__item_category">Runing Shoes</span>
+						</div>
+					</a>
 				</div><div class="footer__item">
-					<img class="footer__item_img" src="./images/wallet.png">
-					<div class="footer__item_description">
-						<h3 class="footer__item_name">Wallets leather</h3>
-						<span class="footer__item_price">$78</span>
-						<span class="footer__item_category">Accessories</span>
-					</div>
+					<a class="footer__item_link" href="#">
+						<img class="footer__item_img" src="./images/wallet.png">
+						<div class="footer__item_description">
+							<h3 class="footer__item_name">Wallets leather</h3>
+							<span class="footer__item_price">$78</span>
+							<span class="footer__item_category">Accessories</span>
+						</div>
+					</a>	
 				</div><div class="footer__item">
-					<img class="footer__item_img" src="./images/shoes.png">
-					<div class="footer__item_description">
-						<h3 class="footer__item_name">Shoes men</h3>
-						<span class="footer__item_price">$78</span>
-						<span class="footer__item_category">Runing Shoes</span>
-					</div>
+					<a class="footer__item_link" href="#">
+						<img class="footer__item_img" src="./images/shoes.png">
+						<div class="footer__item_description">
+							<h3 class="footer__item_name">Shoes men</h3>
+							<span class="footer__item_price">$78</span>
+							<span class="footer__item_category">Runing Shoes</span>
+						</div>
+					</a>	
 				</div>
 			</div>
 		</div>
