Added animation to responsive menu

--- a/project/index.html
+++ b/project/index.html
@@ -42,7 +42,12 @@
 				</li>
 			</ul>
 		</div>
-		<a class="header__menu-bars" href="javascript:void(0);" onclick="menuFunction()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+		<a class="header__menu-bars" id="btn" href="javascript:void(0);" onclick="menuFunction()">
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</a>
 	</header>
 	<div class="product">
 		<div class="container">
@@ -58,7 +63,7 @@
 				<span class="product__chapter">
 					<i class="fa fa-mars product__chapter_mars" aria-hidden="true"></i><a class="product__chapter_link" href="#">Men Clothes</a><i class="fa fa-angle-right product__chapter_angel" aria-hidden="true"></i><a class="product__chapter_link" href="#">Coat & Jacket</a>
 				</span>
-				<h1 class="product__title">LIGHTWEIGHT NYLON KNITWEAT IN BLACK</h1>
+				<h1 class="product__title">Lightweight nylon knitweat in black</h1>
 				<span class="product__price">$48.00</span>
 				<h3 class="product__description_title">Description</h3>
 				<p class="product__description_text">Cras efficitur iaculis sapien, vel tincidunt magna egestas at. Nunc finibus, metus id fermentum. Cras efficitur iaculis sapien, vel tincidunt magna egestas at, vel tincidunt magna egestas at cras effcitur.</p>
